# biopython

./: CMakeLists.txt
Bio/PDB/: CIFParser.py  MMCIF2Dict.py  MMCIFParser.py
Bio/PDB/mmCIF/: CIFyacc.py  CIFyacc2.py  MMCIFply.py  cif_ply.py  lex.yy.c
Bio/SeqIO/: PyvcfIO.py  UniprotIO.py  VariantIO.py
Bio/Variant/: Pyvcf2db.py  VCFAdapter.py  VarRecFreebayes.py  VarRecHGVS.py  VariantDB.py  VariantIO.py  VariantRecord.py  variant.py
Tests/: test_MMCIF.py  test_PyCIFRW.py
